--- a/myblog/package.json
+++ b/myblog/package.json
@@ -8,6 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "element-ui": "^2.13.0"
+    "element-ui": "^2.13.0",
+    "leancloud-storage": "^4.1.0",
+    "valine": "^1.3.10",
+    "vuepress-plugin-comment": "^0.7.2"
   }
 }
