--- a/myblog/package.json
+++ b/myblog/package.json
@@ -12,5 +12,6 @@
     "leancloud-storage": "^4.1.0",
     "valine": "^1.3.10",
     "vuepress-plugin-comment": "^0.7.2"
-  }
+  },
+  "devDependencies": {}
 }
