--- a/myblog/package.json
+++ b/myblog/package.json
@@ -13,5 +13,7 @@
     "valine": "^1.3.10",
     "vuepress-plugin-comment": "^0.7.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "vuepress-plugin-auto-sidebar": "^1.3.1"
+  }
 }
