--- a/myblog/package.json
+++ b/myblog/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "element-ui": "^2.13.0",
     "leancloud-storage": "^4.1.0",
     "valine": "^1.3.10",
