--- a/myblog/package.json
+++ b/myblog/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "element-ui": "^2.13.0",
     "leancloud-storage": "^4.1.0",
+    "minimist": "^1.2.2",
     "valine": "^1.3.10",
     "vuepress-plugin-comment": "^0.7.2"
   },
