--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
 - cp config/secureinfo.js.txt config/secureinfo.js
 - sed -i "s/your leancloud appid/${LEAN_APPID}/g" config/secureinfo.js
 - sed -i "s/your leancloud appkey/${LEAN_APPKEY}/g" config/secureinfo.js
-- yarn docs:dev && yarn docs:build
+- yarn docs:build
 - echo "Hello Travis"
 after_success:
 - sshpass -p "${DEPLOY_PASSWORD}" ssh "${DEPLOY_USERNAME}@${DEPLOY_DOMAIN}" -p "${DEPLOY_PORT}"
