--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 - sudo apt-get update -y && sudo apt-get install sshpass -y && sshpass -h && sshpass -V 
 - echo "Install vuepress"
 - yarn global add vuepress
+- yarn install
 - echo "Install vuepress plugin"
 - yarn add vuepress-plugin-comment -D
 - yarn add vuepress-plugin-auto-sidebar -D
